--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
         <h1>Pong</h1>
         <canvas id="game" width="600" height="700"></canvas>
         <button id="go">commencer la partie</button>
+        <div>
+            <p>score : <span id="score"></span> s</p>
+        </div>
         <script src="js/scripts.js"></script>
     </body>
 </html>
