ajout du message lorsque le joueur perd

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <div>
             <p>score : <span id="score"></span> s</p>
         </div>
+        <div id="message"></div>
         <script src="js/scripts.js"></script>
     </body>
 </html>
