ajout du meilleur score

--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
         <canvas id="game" width="600" height="700"></canvas>
         <button id="go">commencer la partie</button>
         <div>
-            <p>score : <span id="score"></span> s</p>
+            <p>
+                score : <span id="score"></span> s
+                <br>
+                meilleur score : <span id="best-score"></span> s
+            </p>
         </div>
         <div id="message"></div>
         <script src="js/scripts.js"></script>
