ajout du css + bouton pour tactile

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="fr">
     <head>
         <title>Pong</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="css/style.css" />
     </head>
     <body>
@@ -16,6 +17,10 @@
             </p>
         </div>
         <div id="message"></div>
+        <div>
+            <button id="left-btn">⬅️</button>
+            <button id="right-btn">➡️</button>
+        </div>
         <script src="js/scripts.js"></script>
     </body>
 </html>
